[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/PlacementBox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/inf.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/artillery.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/vehical.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/bg.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/ScrollContainer.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 396.046, 176.679 )

[node name="PlacementBox" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="bg" type="Sprite" parent="Area2D/CollisionShape2D"]
modulate = Color( 0.180392, 0.180392, 0.180392, 0.203922 )
position = Vector2( -0.762421, -0.195228 )
scale = Vector2( 0.40619, 0.320928 )
texture = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 389.18
margin_top = -3.8147e-06
margin_right = 466.18
margin_bottom = 24.0
rect_scale = Vector2( 3.0339, 3.0339 )
custom_fonts/font = ExtResource( 6 )
text = "BEGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Cursor" type="Node2D" parent="."]

[node name="infCursor" type="Sprite" parent="Cursor"]
scale = Vector2( 0.0721965, 0.0721965 )
texture = ExtResource( 2 )

[node name="vehCursor" type="Sprite" parent="Cursor"]
position = Vector2( -0.814516, -17.9191 )
scale = Vector2( 0.134131, 0.137985 )
texture = ExtResource( 4 )

[node name="artCursor" type="Sprite" parent="Cursor"]
position = Vector2( 9.77408, -8.14508 )
scale = Vector2( 0.117061, 0.117061 )
texture = ExtResource( 3 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
